fix: add missing scrolling behavior (#477)
* fix: add missing scrolling behavior

* thin scrollbar

--- a/packages/ui/src/components/JobCard/Details/Details.module.css
+++ b/packages/ui/src/components/JobCard/Details/Details.module.css
@@ -15,11 +15,25 @@
   margin-left: 0.75rem;
 }
 
+.tabContent::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+.tabContent::-webkit-scrollbar-track {
+  padding: 2px;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.tabContent::-webkit-scrollbar-thumb {
+  background-color: #cbd5e0;
+  border-radius: 4px;
+}
+
 .tabContent {
   flex: 1;
   max-width: calc(100% - 80px);
-  overflow: hidden;
-  position: relative;
+  overflow-y: scroll;
+  position: relative; 
 }
 
 .tabContent :global(.error) {
